feat: add shop_timezone to sync pull response
